updated main and login template

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,22 @@
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fund My Project!</title>
-    <link rel="stylesheet" href="/css/jass.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <title>Merchant Game</title>
+    {{! css link }}
   </head>
-
   <body>
+    <nav>
+      {{#if logged_in}}
+        <button class="btn" id="logout">logout</button>
+      {{/if}}
+      {{!-- where user will see their saveFile --}}
+      <button class="btn" id="homepage">homepage</button>
+    </nav>
+    {{{body}}}
+    <!-- Render script for logged in users only -->
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
     {{/if}}
   </body>
-
 </html>
