--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,6 +15,9 @@
       </div>
     </form>
   </div>
+
+  {{!-- we can have another page for sign up but for now have included here --}}
+  
   <div class="col-md-6">
     <h2>Signup</h2>
     <form class="form signup-form">
@@ -36,4 +39,4 @@
     </form>
   </div>
 </div>
-<script src="./js/login.js"></script>
+<script src="../public/js/login.js"></script>
