updated ids and classes to match public/js files

--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -14,12 +14,12 @@
         <div class="card-body">
           {{! image of object? }}
           <img src="/images/" alt="" />
-          <button class="" id="">Buy</button>
-          <button class="" id="">Sell</button>
+          <button class="buy-item" data-id="{{item.id}}">Buy</button>
+          <button class="sell-item" data-id="{{item.id}}">Sell</button>
         </div>
       </div>
     {{/each}}
     </div>
   </div>
 </section>
-<button class="" id="">Go back to Map</button>
+<button class="world-map" id="">Go back to Map</button>
