--- a/views/worldMap.handlebars
+++ b/views/worldMap.handlebars
@@ -3,32 +3,32 @@
 <div class="container text-center">
   <div class="row justify-content-start">
     <div class="col-4">
-      <button class="" id="">City</button>
+      <button class="cities" data-id="{{location.id}}">City</button>
     </div>
   </div>
   <div class="row justify-content-center">
     <div class="col-4">
-      <button class="" id="">City</button>
+      <button class="cities" data-id="{{location.id}}">City</button>
     </div>
   </div>
   <div class="row justify-content-end">
     <div class="col-4">
-      <button class="" id="">City</button>
+      <button class="cities" data-id="{{location.id}}">City</button>
     </div>
   </div>
   <div class="row justify-content-around">
     <div class="col-4">
-      <button class="" id="">City</button>
+      <button class="cities" data-id="{{location.id}}">City</button>
     </div>
   </div>
   <div class="row justify-content-between">
     <div class="col-4">
-      <button class="" id="">City</button>
+      <button class="cities" data-id="{{location.id}}">City</button>
     </div>
   </div>
   <div class="row justify-content-evenly">
     <div class="col-4">
-      <button class="" id="">City</button>
+      <button class="cities" data-id="{{location.id}}">City</button>
     </div>
   </div>
 </div>
