linked templates to their relevant js and fixed a few things

--- a/views/saveFile.handlebars
+++ b/views/saveFile.handlebars
@@ -16,7 +16,7 @@
         </div>
         {{! button will direct to existing game }}
         <div class="form-group">
-          <button class="btn new-game" type="submit">login</button>
+          <button class="btn new-game" type="submit">Create</button>
         </div>
       </div>
     </div>
@@ -35,3 +35,4 @@
       </div>
     {{/each}}
   </div>
+<script src="../public/js/saveFile.js"></script>
