--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,18 +1,22 @@
-	<div class="contact-form">
-		<img alt="" class="avatar" src="https://i.postimg.cc/zDyt7KCv/a1.jpg">
-		<h2>New MerhchantGame Player</h2>
-		<form action="">
-            <p>Name</p><input placeholder="Enter Name" type="text">
-			<p>Email</p><input placeholder="Enter Email" type="email">
-           
-            <p>Date of Birth</p><input placeholder="Date" type="date"> 
-			<p>Password</p><input placeholder="Enter Password" type="password"> <input type="submit" value="Register">
-           
-
-      <p><input type="checkbox">Remember Me</p>
-       
-		</form>
-	</div>
-    <script src="./js/script.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <div class="col-md-6">
+    <h2>Signup</h2>
+    <form class="form signup-form">
+      <div class="form-group">
+        <label for="name-signup">name:</label>
+        <input class="form-input" type="text" id="name-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <button class="btn signup-form" type="submit">signup</button>
+      </div>
+    </form>
+  </div>
+</div>
+<script src="../public/js/signUp.js"></script>
