--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -14,13 +14,13 @@
         <div class="card-body">
           {{! image of object? }}
           <img src="/images/" alt="" />
-          <button class="buy-item" data-id="{{item.id}}">Buy</button>
-          <button class="sell-item" data-id="{{item.id}}">Sell</button>
+          <button class="buy-item" item-id="{{item.id}}">Buy</button>
+          <button class="sell-item" item-id="{{item.id}}">Sell</button>
         </div>
       </div>
     {{/each}}
     </div>
   </div>
 </section>
-<button class="world-map" id="">Go back to Map</button>
+<button class="world-map">Go back to Map</button>
 <script src="../public/js/location.js"></script>
