--- a/views/saveFile.handlebars
+++ b/views/saveFile.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-auto">
     {{! name of user }}
-    <h1>Welcome, ... </h1>
+    <h1>Welcome, {{user.name}}</h1>
   </div>
 </div>
 <section class="container">
@@ -22,8 +22,7 @@
     </div>
     {{! retrieve existing game }}
     {{#each}}
-      <div class="card" data-id="">
-        {{! name of safeFile in Header }}
+      <div class="card" data-id="{{saveFile.id}}">
         <header></header>
         <div class="card-body">
           {{! have a random image in the card to make it nicer  }}
