--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,5 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Login</h2>
     <form class="form login-form">
       <div class="form-group">
         <label for="email-login">email:</label>
@@ -11,7 +10,7 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn login-form" type="submit">login</button>
+        <button class="btn login-btn" type="submit">login</button>
       </div>
     </form>
   </div>
