replace playerHomePage with saveFile in public routes and added a sign up button on login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,5 +13,7 @@
         <button class="btn login-btn" type="submit">login</button>
       </div>
     </form>
+    <h3>No login?</h3>
+    <button class="btn signUp-page-btn" type="submit">Sign up</button>
   </div>
   <script src="../public/js/login.js"></script>
