--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,6 +14,6 @@
       </div>
     </form>
     <h3>No login?</h3>
-    <button class="btn signUp-page-btn" type="submit">Sign up</button>
+    <button class="btn signUp-page-btn" type="submit" onclick=window.location.href='http://localhost:3001/signup'>Sign up</button>
   </div>
   <script src="../public/js/login.js"></script>
