--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,15 +13,15 @@
 </head>
   <body>
    <nav>
-      {{#if logged_in}}
-        <button class="btn" id="logout">logout</button>
+      {{#if loggedIn}}
+        <button class="btn" id="logout">Logout</button>
       {{/if}}
       {{! where user will see their saveFile }}
-      <button class="btn" id="homepage">homepage</button>
+      <button class="btn" id="homepage">Homepage</button>
     </nav>
     {{{body}}}
     <!-- Render script for logged in users only -->
-    {{#if logged_in}}
+    {{#if loggedIn}}
       <script src="/js/logout.js"></script>
     {{/if}}
   </body>
