--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -22,4 +22,4 @@
   </div>
 </section>
 <button class="world-map">Go back to Map</button>
-<script src="../public/js/location.js"></script>
+<script src="/js/location.js"></script>
