--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Poppins', sans-serif;
@@ -91,4 +91,4 @@ input[type=checkbox] {
 	;
 
 
-}
+} */
