added homepage button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-   <nav>
+    <nav>
       {{#if loggedIn}}
         <button class="btn" id="logout">Logout</button>
       {{/if}}
@@ -41,5 +41,6 @@
     {{#if loggedIn}}
       <script src="/js/logout.js"></script>
     {{/if}}
+    <script src="../js/homePage.js"></script>
   </body>
 </html>
