--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* body {
+ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Poppins', sans-serif;
@@ -18,7 +18,7 @@ body:before {
 	-moz-filter: blur(5px);
 	filter: blur(6px);
 }
-.contact-form {
+.login-form {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -37,24 +37,24 @@ body:before {
 	top: calc(-80px/2);
 	left: 160px;
 }
-.contact-form h2 {
+.login-form h2 {
 	margin: 0;
 	padding: 0 0 20px;
 	color: #fff;
 	text-align: center;
 	text-transform: uppercase;
 }
-.contact-form p {
+.login-form p {
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
 	color: #fff;
 }
-.contact-form input {
+.login-form input {
 	width: 100%;
 	margin-bottom: 20px;
 }
-.contact-form input[type=email], .contact-form input[type=password],[type=text],[type=date] {
+.login-form input[type=email],[type=password],[type=text],[type=date] {
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
@@ -63,7 +63,7 @@ body:before {
 	color: black;
 	font-size: 16px;
 }
-.contact-form input[type=submit] {
+.login-form input[type=submit] {
 	height: 30px;
 	color: #fff;
 	font-size: 15px;
@@ -74,7 +74,7 @@ body:before {
 	outline: none;
 	margin-top: 15%;
 }
-.contact-form a {
+.login-form a {
 	color: #fff;
 	font-size: 14px;
 	font-weight: bold;
@@ -91,4 +91,4 @@ input[type=checkbox] {
 	;
 
 
-} */
+} 
