added bulma css for saveFile page and updated styles for main, login and signup

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <section class="section">
   <div class="columns is-mobile">
-    <div class="column is-8 is-offset-2 is-centered">
+    <div class="column is-three-fifths is-offset-one-fifth is-centered">
       <div class="container">
-        <div class="card">
+        <div class="card mt-6">
           <div class="card-content">
             <div class="content">
               <div class="field">
@@ -26,7 +26,10 @@
                 </div>
               </div>
               <h3>No account?</h3>
-              <button class="button signUp-page-btn" type="submit">Sign up</button>
+              <button
+                class="button has-background-dark has-text-white signUp-page-btn"
+                type="submit"
+              >Sign up</button>
             </div>
           </div>
         </div>
