--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,14 +55,14 @@
         <div class="navbar-end">
                 {{#if loggedIn}}
           <div class="navbar-item">
-            <a class="navbar-item has-text-white has-background-dark is-size-4"
-              href="" id="homepage">
+            <button class="button navbar-item has-text-white has-background-dark is-size-4 mr-2"
+              id="homepage">
               Homepage
-            </a>
-            <a class="navbar-item has-text-white has-background-dark is-size-4"
-              href="" id="logout">Logout</a>
+            </button>
+            <button class="button navbar-item has-text-white has-background-dark is-size-4"
+            id="logout">Logout</a>
               {{/if}}
-            </a>
+            </button>
           </div>
         </div>
       </div>
