changed columns sizes and wrote code to make burger menu clickable on navbar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -55,7 +55,7 @@
         <div class="navbar-end">
                 {{#if loggedIn}}
           <div class="navbar-item">
-            <button class="button navbar-item has-text-white has-background-dark is-size-4 mr-2"
+            <button class="button navbar-item has-text-white has-background-dark is-inverted is-size-4 mr-2"
               id="homepage">
               Homepage
             </button>
