--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <section class="section">
-  <div class="columns is-mobile">
-    <div class="column is-three-fifths is-offset-one-fifth is-centered">
+  <div class="columns is-mobile is-centered">
+    <div class="column is-narrow">
       <div class="container">
         <div class="card mt-6">
           <div class="card-content">
