--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,8 @@
 <section class="section">
-  <div class="columns is-mobile">
-    <div class="column is-4 is-offset-4 is-centered">
+  <div class="columns is-mobile is-centered">
+    <div class="column is-narrow">
       <div class="container">
-        <div class="card">
+        <div class="card mt-6">
           <div class="card-content">
             <div class="field">
               <label class="label">Name</label>
