--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/image.png"); /* The image used */
+  background-image: url("../images/rsz_image.png"); /* The image used */
   /* height: 700px; You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
