--- a/views/saveFile.handlebars
+++ b/views/saveFile.handlebars
@@ -1,75 +1,66 @@
 <section class="section">
-  <div class="columns is-mobile">
-    <div class="column is-10 is-offset-1">
+  <div class="columns is-mobile is-centered">
+    <div class="column is-narrow">
       <div class="container">
-        <div class="card has-background-light">
-          <div class="card-content has-text-centered">
+        <div class="content">
+          <div
+            class="box title is-2 is-light is-large has-text-centered"
+          >Welcome,
+            {{userName}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="columns is-mobile is-centered">
+    <div class="column is-narrow">
+      <div class="container">
+        <div class="card mt-4">
+          <div class="card-content">
             <div class="content">
-              <h1 class="title is-2 has-text-centered">Welcome,
-                {{userName}}</h1>
-            </div>
-            <div class="columns is-mobile">
-              <div class="column is-4 is-offset-4">
-                <div class="container">
-                  <div class="card mt-4">
-                    <div class="card-content">
-                      <div class="content">
-                        <h2 class="subtitle">Create a new game!</h2>
-                        <div class="card-body">
-                          <div class="field">
-                            <label class="label new-game-name">Name of new
-                              character</label>
-                            <div class="control">
-                              <input class="input" type="text" id="new-game" />
-                            </div>
-                          </div>
-                          {{! button will direct to existing game }}
-                          <div class="field">
-                            <div class="control">
-                              <button
-                                class="button mt-3 new-game"
-                                type="submit"
-                              >Create</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+              <h2 class="subtitle">Create a new game!</h2>
+              <div class="card-body">
+                <div class="field">
+                  <label class="label new-game-name">Name of new character</label>
+                  <div class="control">
+                    <input class="input" type="text" id="new-game" />
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="columns is-centered is-mobile">
-            <div class="column is-one-third m-4">
-              <div class="container">
-                {{! retrieve existing game }}
-                {{#if saveFiles}}
-                  {{#each saveFiles as |saveFile|}}
-                    <div class="card" data-id="{{saveFile.id}}">
-                      <div class="card-content">
-                        <div class="content">
-                          <header
-                            class="subtitle has-text-centered"
-                          >{{saveFile.day}}</header>
-                          <div class="card-body">
-                            {{! have a random image in the card to make it nicer  }}
-                            <img src="/images/" alt="" />
-                            {{! button will direct to existing game }}
-                            <button class="button existing-game">Continue game</button>
-                            <button class="button delete-game">Delete game</button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  {{/each}}
-                {{/if}}
+                {{! button will direct to existing game }}
+                <div class="field">
+                  <div class="control">
+                    <button
+                      class="button mt-3 new-game"
+                      type="submit"
+                    >Create</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    {{#if saveFiles}}
+      {{#each saveFiles as |saveFile|}}
+        <div class="column is-narrow">
+          <div class="container">
+            <div class="card mt-4" data-id="{{saveFile.id}}">
+              <div class="card-content">
+                <div class="content">
+                  <h2 class="subtitle">Game number: {{saveFile.id}}</h2>
+                  <div class="card-body">
+                    <p class="has-text-centered">Day: {{saveFile.day}}</p>
+                    {{! button will direct to existing game }}
+                    <button class="button existing-game">Continue game</button>
+                    <button class="button delete-game">Delete game</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      {{/each}}
+    {{/if}}
   </div>
 </section>
 <script src="/js/saveFile.js"></script>
