--- a/views/worldMap.handlebars
+++ b/views/worldMap.handlebars
@@ -1,35 +1,18 @@
 {{! have map on background image }}
-{{! this is a bootstrap grid to try and have buttons of city that will lool like they are randomly on the map }}
-<div class="container text-center">
-  <div class="row justify-content-start">
-    <div class="col-4">
-      <button class="cities" data-id="{{location.id}}">City</button>
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-4">
-      <button class="cities" data-id="{{location.id}}">City</button>
-    </div>
-  </div>
-  <div class="row justify-content-end">
-    <div class="col-4">
-      <button class="cities" data-id="{{location.id}}">City</button>
-    </div>
-  </div>
-  <div class="row justify-content-around">
-    <div class="col-4">
-      <button class="cities" data-id="{{location.id}}">City</button>
-    </div>
-  </div>
-  <div class="row justify-content-between">
-    <div class="col-4">
-      <button class="cities" data-id="{{location.id}}">City</button>
-    </div>
-  </div>
-  <div class="row justify-content-evenly">
-    <div class="col-4">
-      <button class="cities" data-id="{{location.id}}">City</button>
-    </div>
-  </div>
+{{! this is a bulma grid to try and have buttons of city that will lool like they are randomly on the map }}
+<div class="container is-flex is-justify-content-center mt-6">
+  <button class="button cities" data-id="{{location.id}}">City</button>
+</div>
+<div class="container is-flex is-justify-content-flex-start mt-6">
+  <button class="button cities" data-id="{{location.id}}">City</button>
+</div>
+<div class="container is-flex is-justify-content-flex-end m-6">
+  <button class="button cities" data-id="{{location.id}}">City</button>
+</div>
+<div class="container is-flex is-flex is-justify-content-center m-6">
+  <button class="button cities" data-id="{{location.id}}">City</button>
+</div>
+<div class="container is-flex is-flex is-justify-content-left m-6">
+  <button class="button cities" data-id="{{location.id}}">City</button>
 </div>
 <script src="/js/worldMap.js"></script>
