--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -1,25 +1,69 @@
-<div class="row">
-  <div class="col-auto">
-    {{! name of city }}
-    <h1>Welcome to {{location.name}}</h1>
-  </div>
-</div>
-<section class="container">
-  <div class="row justify-center">
-    {{#each}}
-      {{! add item}}
-      <div class="card">
-        <header>{{itemType.name}}</header>
-        <div class="card-body">
-          {{! image of object? }}
-          <img src="/images/" alt="" />
-          <button class="buy-item" item-id="{{item.id}}">Buy</button>
-          <button class="sell-item" item-id="{{item.id}}">Sell</button>
+
+
+<section class="section">
+  <div class="columns is-mobile is-centered">
+    <div class="column is-narrow">
+      <div class="container">
+        <div class="content">
+          <div
+            class="box title is-2 is-light is-large has-text-centered"
+            Welcome to {{location.name}}</div>
         </div>
       </div>
-    {{/each}}
     </div>
   </div>
+  <div class="columns is-mobile is-centered">
+    <div class="column is-narrow">
+      <div class="container">
+        <div class="card mt-4">
+          <div class="card-content">
+            <div class="content">
+              <h2 class="subtitle">Create a new game!</h2>
+              <div class="card-body">
+                <div class="field">
+                  <label class="label new-game-name">Name of new character</label>
+                  <div class="control">
+                    <input class="input" type="text" id="new-game" />
+                  </div>
+                </div>
+                {{! button will direct to existing game }}
+                <div class="field">
+                  <div class="control">
+                    <button
+                      class="button mt-3 new-game"
+                      type="submit"
+                    >Create</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {{#if saveFiles}}
+      {{#each itemTypes as |itemType}}
+        <div class="column is-narrow">
+          <div class="container">
+            <div class="card mt-4" data-id="{{item.id}}">
+              <div class="card-content">
+                <div class="content">
+                  <h2 class="subtitle">{{itemType.name}}</h2>
+                  <div class="card-body">
+                    <img src="/images/" alt="" />
+                    <button class="button buy-item" item-id="{{item.id}}">Buy</button>
+                    <button class="button sell-item" item-id="{{item.id}}">Sell</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      {{/each}}
+    {{/if}}
+  </div>
 </section>
-<button class="world-map">Go back to Map</button>
+<footer class="is-centered">
+  <button class="button world-map">Go back to Map</button>
+  </footer>
 <script src="/js/location.js"></script>
