--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -1,47 +1,16 @@
-
-
 <section class="section">
   <div class="columns is-mobile is-centered">
     <div class="column is-narrow">
       <div class="container">
         <div class="content">
           <div
-            class="box title is-2 is-light is-large has-text-centered"
+            class="box title is-2 is-light is-large has-text-centered">
             Welcome to {{location.name}}</div>
         </div>
       </div>
     </div>
   </div>
   <div class="columns is-mobile is-centered">
-    <div class="column is-narrow">
-      <div class="container">
-        <div class="card mt-4">
-          <div class="card-content">
-            <div class="content">
-              <h2 class="subtitle">Create a new game!</h2>
-              <div class="card-body">
-                <div class="field">
-                  <label class="label new-game-name">Name of new character</label>
-                  <div class="control">
-                    <input class="input" type="text" id="new-game" />
-                  </div>
-                </div>
-                {{! button will direct to existing game }}
-                <div class="field">
-                  <div class="control">
-                    <button
-                      class="button mt-3 new-game"
-                      type="submit"
-                    >Create</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    {{#if saveFiles}}
       {{#each itemTypes as |itemType}}
         <div class="column is-narrow">
           <div class="container">
@@ -63,7 +32,7 @@
     {{/if}}
   </div>
 </section>
-<footer class="is-centered">
-  <button class="button world-map">Go back to Map</button>
-  </footer>
+<footer class="has-text-centered">
+<button class="button world-map">Go back to Map</button>
+</footer>
 <script src="/js/location.js"></script>
