updated templates with comments and fixed a couple of css typos

--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -11,6 +11,7 @@
     </div>
   </div>
   <div class="columns is-mobile is-centered">
+    {{!-- a card for each item will appear with a button to buy and to sell  --}}
       {{#each itemTypes as |itemType}}
         <div class="column is-narrow">
           <div class="container">
