--- a/views/worldMap.handlebars
+++ b/views/worldMap.handlebars
@@ -1,5 +1,5 @@
 {{! have map on background image }}
-{{! this is a bulma grid to try and have buttons of city that will lool like they are randomly on the map }}
+{{! this is a bulma grid to try and have buttons of city that will look like they are randomly on the map }}
 <div class="container is-flex is-justify-content-center mt-6">
   <button class="button cities" data-id="{{location.id}}">City</button>
 </div>
@@ -9,10 +9,10 @@
 <div class="container is-flex is-justify-content-flex-end m-6">
   <button class="button cities" data-id="{{location.id}}">City</button>
 </div>
-<div class="container is-flex is-flex is-justify-content-center m-6">
+<div class="container is-flex is-justify-content-center m-6">
   <button class="button cities" data-id="{{location.id}}">City</button>
 </div>
-<div class="container is-flex is-flex is-justify-content-left m-6">
+<div class="container is-flex is-justify-content-left m-6">
   <button class="button cities" data-id="{{location.id}}">City</button>
 </div>
 <script src="/js/worldMap.js"></script>
