--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,6 +1,6 @@
+/* have worlmap on the background of pages */
 body {
-  background-image: url("../images/rsz_image.png"); /* The image used */
-  /* height: 700px; You must set a specified height */
+  background-image: url("../images/citybg.png"); /* The image used */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
