--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,6 +2,7 @@
   <div class="columns is-mobile is-centered">
     <div class="column is-narrow">
       <div class="container">
+        {{! card element contains form for login}}
         <div class="card mt-6">
           <div class="card-content">
             <div class="content">
