--- a/views/saveFile.handlebars
+++ b/views/saveFile.handlebars
@@ -14,6 +14,7 @@
   <div class="columns is-mobile is-centered">
     <div class="column is-narrow">
       <div class="container">
+        {{! card to create a new game }}
         <div class="card mt-4">
           <div class="card-content">
             <div class="content">
@@ -25,7 +26,6 @@
                     <input class="input" type="text" id="new-game" />
                   </div>
                 </div>
-                {{! button will direct to existing game }}
                 <div class="field">
                   <div class="control">
                     <button
@@ -40,6 +40,7 @@
         </div>
       </div>
     </div>
+    {{! each saveFile will appear as a card with a button to continue game and a button to delete game }}
     {{#if saveFiles}}
       {{#each saveFiles as |saveFile|}}
         <div class="column is-narrow">
