centered a few elements in login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,11 +26,12 @@
                   >Login</button>
                 </div>
               </div>
-              <h3>No account?</h3>
-              <button
+              <div class="container mt-5"> </div>
+                <p>No account?</p>
+                <button
                 class="button has-background-dark has-text-white signUp-page-btn"
-                type="submit"
-              >Sign up</button>
+                type="submit">Sign up</button>
+              </div>
             </div>
           </div>
         </div>
