made saveFile page responsive

--- a/views/saveFile.handlebars
+++ b/views/saveFile.handlebars
@@ -11,23 +11,23 @@
       </div>
     </div>
   </div>
-  <div class="columns is-mobile is-centered">
-    <div class="column is-narrow">
+  <div class="columns is-centered">
+    <div class="column">
       <div class="container">
         {{! card to create a new game }}
         <div class="card mt-4">
           <div class="card-content">
-            <div class="content">
+            <div class="content has-text-centered">
               <h2 class="subtitle">Create a new game!</h2>
               <div class="card-body">
-                <div class="field has-text-centered">
+                <div class="field">
                   <label class="label new-game-name">Name of new character</label>
                   <div class="control">
                     <input class="input" type="text" id="new-game" />
                   </div>
                 </div>
-                <div class="field ">
-                  <div class="control has-text-centered">
+                <div class="field">
+                  <div class="control">
                     <button
                       class="button has-background-danger-dark has-text-white mt-5 mb-3 new-game"
                       type="submit"
@@ -43,20 +43,20 @@
     {{! each saveFile will appear as a card with a button to continue game and a button to delete game }}
     {{#if saveFiles}}
       {{#each saveFiles as |saveFile|}}
-        <div class="column is-narrow">
+        <div class="column">
           <div class="container">
             <div class="card mt-4" data-id="{{saveFile.id}}">
-              <div class="card-content">
+              <div class="card-content has-text-centered">
                 <div class="content">
                   <h2 class="subtitle">Game number: {{saveFile.id}}</h2>
                   <div class="card-body">
                     <p class="has-text-centered">Day: {{saveFile.day}}</p>
                     {{! button will direct to existing game }}
                     <button
-                      class="button has-background-danger-dark has-text-white existing-game"
+                      class="button has-background-danger-dark has-text-white existing-game mt-2"
                     >Continue game</button>
                     <button
-                      class="button has-background-danger-dark has-text-white delete-game"
+                      class="button has-background-danger-dark has-text-white delete-game mt-2"
                     >Delete game</button>
                   </div>
                 </div>
