nested columns on savefile and changed sizes of form for login and signup to adapt to screen sizes

--- a/views/saveFile.handlebars
+++ b/views/saveFile.handlebars
@@ -11,11 +11,11 @@
       </div>
     </div>
   </div>
-  <div class="columns is-centered">
-    <div class="column">
+  <div class="columns is-mobile is-centered">
+    <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
       <div class="container">
-       {{! card to create a new game }}
-        <div class="card mt-4">
+        {{! card to create a new game }}
+        <div class="card mt-4 mb-6">
           <div class="card-content">
             <div class="content has-text-centered">
               <h2 class="subtitle">Create a new game!</h2>
@@ -29,7 +29,7 @@
                 <div class="field">
                   <div class="control">
                     <button
-                      class="button has-background-danger-dark has-text-white mt-5 mb-3 new-game"
+                      class="button has-background-danger-dark has-text-white new-game"
                       type="submit"
                     >Create</button>
                   </div>
@@ -39,29 +39,37 @@
           </div>
         </div>
       </div>
-    </div>
-    {{! each saveFile will appear as a card with a button to continue game and a button to delete game }}
-    {{#if saveFiles}}
-      {{#each saveFiles as |saveFile|}}
-        <div class="column">
-          <div class="container">
-            <div class="card mt-4" data-id="{{saveFile.id}}">
-              <div class="card-content has-text-centered">
-                <div class="content">
-                  <h2 class="subtitle">Game {{saveFile.id}}</h2>
-                  <div class="card-body">
-                    <p class="has-text-centered">Day {{saveFile.day}}</p>
-                    {{! button will direct to existing game }}
-                    <button class="button has-background-danger-dark has-text-white existing-game mt-2 existing-game" data-id="{{saveFile.id}}">Continue game</button>
-                    <button class="button has-background-danger-dark has-text-white existing-game mt-2 delete-game" data-id="{{saveFile.id}}">Delete game</button>
+      <div class="columns is-centered">
+        {{! each saveFile will appear as a card with a button to continue game and a button to delete game }}
+        {{#if saveFiles}}
+          {{#each saveFiles as |saveFile|}}
+            <div class="column ">
+              <div class="container">
+                <div class="card m-3" data-id="{{saveFile.id}}">
+                  <div class="card-content has-text-centered">
+                    <div class="content">
+                      <h2 class="subtitle">Game {{saveFile.id}}</h2>
+                      <div class="card-body">
+                        <p class="has-text-centered">Day {{saveFile.day}}</p>
+                        {{! button will direct to existing game }}
+                        <button
+                          class="button has-background-danger-dark has-text-white existing-game mt-2 existing-game"
+                          data-id="{{saveFile.id}}"
+                        >Continue game</button>
+                        <button
+                          class="button has-background-danger-dark has-text-white existing-game mt-2 delete-game"
+                          data-id="{{saveFile.id}}"
+                        >Delete game</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      {{/each}}
-    {{/if}}
+          {{/each}}
+        {{/if}}
+      </div>
+    </div>
   </div>
 </section>
 <script type="module" src="/js/saveFile.mjs"></script>
