--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="columns is-mobile is-centered">
-    <div class="column is-narrow">
+    <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
       <div class="container">
         {{! card element contains form for login}}
         <div class="card mt-6">
