--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-/* body {
+body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Poppins', sans-serif;
@@ -8,7 +8,7 @@ body:before {
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
-	background-image: url("../images/image.png");
+	background-image: url("./images/image.png");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -18,7 +18,7 @@ body:before {
 	-moz-filter: blur(5px);
 	filter: blur(6px);
 }
-.contact-form {
+.login-form {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -37,24 +37,26 @@ body:before {
 	top: calc(-80px/2);
 	left: 160px;
 }
-.contact-form h2 {
+.login-form h2 {
 	margin: 0;
 	padding: 0 0 20px;
 	color: #fff;
 	text-align: center;
 	text-transform: uppercase;
 }
-.contact-form p {
+
+
+.login-form p {
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
 	color: #fff;
 }
-.contact-form input {
+.login-form input {
 	width: 100%;
 	margin-bottom: 20px;
 }
-.contact-form input[type=email], .contact-form input[type=password],[type=text],[type=date] {
+.login-form input[type=email],[type=password],[type=text],[type=date] {
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
@@ -63,7 +65,7 @@ body:before {
 	color: black;
 	font-size: 16px;
 }
-.contact-form input[type=submit] {
+.login-form input[type=submit] {
 	height: 30px;
 	color: #fff;
 	font-size: 15px;
@@ -74,7 +76,7 @@ body:before {
 	outline: none;
 	margin-top: 15%;
 }
-.contact-form a {
+.login-form a {
 	color: #fff;
 	font-size: 14px;
 	font-weight: bold;
@@ -90,5 +92,54 @@ input[type=checkbox] {
 	border-radius: 5px;
 	;
 
+}
 
-} */
+.login-form-member {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 800px;
+	height: 750px;
+	padding: 80px 40px;
+	background: rgba(0, 0, 0, 0.5);
+
+}
+
+.avatar-member {
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	overflow: hidden;
+	top: calc(-90px/2);
+	left: 160px;
+}
+
+.navbar is-transparent{
+	content: '';
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	background-image: url("./images/image.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	-webkit-background-size: cover;
+	background-size: cover;
+	-webkit-filter: blur(10px);
+	-moz-filter: blur(5px);
+	filter: blur(6px);
+}
+
+.card-content{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 450px;
+	padding: 300px 40px;
+	background: rgba(0, 0, 0, 0.5);
+	
+}
