--- a/views/worldMap.handlebars
+++ b/views/worldMap.handlebars
@@ -1,18 +1,35 @@
 {{! have map on background image }}
 {{! this is a bulma grid to try and have buttons of city that will look like they are randomly on the map }}
-<div class="container is-flex is-justify-content-center mt-6">
-  <button class="button cities" data-id="{{locations.[0].id}}">{{locations.[0].name}}</button>
-</div>
-<div class="container is-flex is-justify-content-flex-start mt-6">
-  <button class="button cities" data-id="{{locations.[1].id}}">{{locations.[1].name}}</button>
-</div>
-<div class="container is-flex is-justify-content-flex-end m-6">
-  <button class="button cities" data-id="{{locations.[2].id}}">{{locations.[2].name}}</button>
-</div>
-<div class="container is-flex is-justify-content-center m-6">
-  <button class="button cities" data-id="{{locations.[3].id}}">{{locations.[3].name}}</button>
-</div>
-<div class="container is-flex is-justify-content-left m-6">
-  <button class="button cities" data-id="{{locations.[4].id}}">{{locations.[4].name}}</button>
-</div>
+<section class="section">
+  <div class="container is-flex is-justify-content-center mt-4">
+    <button
+      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
+      data-id="{{locations.0.id}}"
+    >{{locations.0.name}}</button>
+  </div>
+  <div class="container is-flex is-justify-content-flex-start mt-6">
+    <button
+      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
+      data-id="{{locations.1.id}}"
+    >{{locations.1.name}}</button>
+  </div>
+  <div class="container is-flex is-justify-content-flex-end m-6">
+    <button
+      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
+      data-id="{{locations.2.id}}"
+    >{{locations.2.name}}</button>
+  </div>
+  <div class="container is-flex is-justify-content-center m-6">
+    <button
+      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
+      data-id="{{locations.3.id}}"
+    >{{locations.3.name}}</button>
+  </div>
+  <div class="container is-flex is-justify-content-left m-6">
+    <button
+      class="button is-rounded is-medium has-background-danger-dark has-text-white is-outlined cities"
+      data-id="{{locations.4.id}}"
+    >{{locations.4.name}}</button>
+  </div>
+</section>
 <script src="/js/worldMap.js"></script>
