--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merchant Game</title>
+    <script src="https://kit.fontawesome.com/a5df7e3382.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
       rel="stylesheet"
@@ -28,8 +29,8 @@
       rel="stylesheet"
       href="cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./css/style2.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style2.css" />
+    {{!-- <link rel="stylesheet" href="./css/style.css" /> --}}
   </head>
   <body>
     <!-- this is the navbar element -->
