--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
   <div class="columns is-mobile is-centered">
     <div
       class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
-      <div class="container">
+      <div class="container is-vcentered">
         {{! card element contains form for signUp }}
         <div class="card mt-6">
           <div class="card-content">
