Added functionality for food and wages to be consumed each day

--- a/views/worldMap.handlebars
+++ b/views/worldMap.handlebars
@@ -15,4 +15,4 @@
 <div class="container is-flex is-justify-content-left m-6">
   <button class="button cities" data-id="{{locations.[4].id}}">{{locations.[4].name}}</button>
 </div>
-<script src="/js/worldMap.js"></script>
+<script type="module" src="/js/worldMap.mjs"></script>
